<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/expanded_app_bar"
            app:expandedTitleMarginBottom="@dimen/md_keylines_x4"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:background="@drawable/avatar_dog"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/article_padding"
            android:paddingEnd="@dimen/article_padding"
            android:paddingTop="@dimen/md_keylines_x3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/fullname"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_user" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/role"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/user_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Student" />

            <TextView
                android:id="@+id/score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:visibility="invisible"
                android:text="@string/score"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:text="0 points" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/md_keylines_x3"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/user_history"
                    android:layout_width="@dimen/image_margin"
                    android:layout_height="@dimen/image_margin"
                    android:layout_gravity="start"
                    android:onClick="onClick"
                    android:scaleType="centerInside"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="?android:selectableItemBackground"
                    app:srcCompat="@drawable/activity_history"/>

                <ImageButton
                    android:id="@+id/user_statistics"
                    android:layout_width="@dimen/image_margin"
                    android:layout_height="@dimen/image_margin"
                    android:onClick="onClick"
                    android:scaleType="centerInside"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="?android:selectableItemBackground"
                    app:srcCompat="@drawable/activity_statistics" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_mode_edit_white_24dp"
        android:visibility="invisible"
        android:layout_margin="@dimen/fab_margin" />

</android.support.design.widget.CoordinatorLayout>
