<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edukka</string>
    <string name="app_user">Javier Rosales Bañón</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register Here</string>

    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="fullname">Full Name</string>
    <string name="classid">Class ID (optional)</string>
    <string name="signup">Sign Up</string>

    <string name="nodata">No Data Available</string>
    <string name="myprofile">My Profile</string>
    <string name="myclass">My Class</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>

    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>

    <string name="classname">Class Name</string>
...
