...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/md_keylines_x2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_name"
            android:textSize="@dimen/article_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            tools:text="@string/gametitle"/>

        <TextView
            android:id="@+id/game_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colorSecondaryText"
            tools:text="@string/lorem_ipsum"/>
...
